--- a/Project3/styles.css
+++ b/Project3/styles.css
@@ -54,7 +54,7 @@
     font-size: 50px;
     margin-top: 70px;
     margin-left: 80px;
-    width: 1280px;
+    margin-right: 80px;
   }
 
   .title {
