--- a/Project3/styles.css
+++ b/Project3/styles.css
@@ -9,7 +9,6 @@
     color:#fff;
     font-family: Helvetica;
     font-size: 50px;
-    width:1440px;
     height: 200px;
     margin: auto;
     display: flex;
@@ -22,13 +21,15 @@
   }
 
   .picture {
+    height: 1080px;
     background: url(Images/img.jpg) no-repeat;
     background-position: center;
+    background-size: cover;
+
   }
 
   .subtitle-container {
     background-color: #E5E000;
-    width: 1440px;
     height: 100px;
     margin: auto;
     display: flex;
@@ -44,7 +45,6 @@
   }
 
   .text-container {
-    width: 1440px;
     margin: auto;
   }
 
@@ -63,7 +63,6 @@
 
   .footer {
     background-color: #E5E000;
-    width: 1440px;
     margin: auto;
     margin-top: 100px;
     height: 200px;
